# tinyobjloader

./: CMakeLists.txt  tiny_obj_loader.cc  tiny_obj_loader.h
